Wed Sep  1 15:10:37 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* include/htconfig.h.in, htcommon/WordReference.h,
	htcommon/WordList.cc(Word, Flush, BadWordFile),
	htcommon/DocumentRef.cc(AddDescription), htcommon/defaults.cc,
	htsearch/parser.cc(perform_push), htdoc/attrs.html,
	htdoc/cf_byname.html, htdoc/cf_byprog.html: Change the maximum word
	length into a run-time option, rather than compile-time.

	* htsearch/Display.cc(displayMatch): Applied Torsten Neuer's
	<tneuer@inwise.de> fix for PR#554.

	* htdig/HTML.cc(HTML, do_tag): Added support for <embed>, <object>
	and <link> tags.

	* htdig/htdig.cc(main): Applied Geoff's patch to hide the
	username/password in the command line arguments.

	* htdig/Document.cc(readHeader): Fixed a few problems with header
	parsing, including PR#535 & PR#557.

	* htdig/Document.cc(getdate): This should help with PR#81 & PR#472,
	where strftime() would crash on some systems.  Idea submitted
	by benoit.sibaud@cnet.francetelecom.fr.

	* COPYING, htdoc/COPYING, Makefile.in: Updated the FSF address
	in COPYING & Makefile.in.  PR#595.

	* htdig/Retriever.cc(IsValidURL): Fix PR#493, to avoid rejecting
	a valid URL with ".." in it.

	* htlib/URL.cc(parse): Fix PR#348, to make sure a missing
	or invalid port number will get set correctly.

	* htsearch/Display.h, htsearch/Display.cc(excerpt): Fix declaration
	to refer to "first" as reference--ensures ANCHOR is properly set.
	Fixes PR#541 as suggested by <pmb1@york.ac.uk>.

	* htdig/ExternalParser.cc(parse): Quote the filename before passing
	it to the command-line to prevent shell escapes. Fixes PR#542.
	Also make error messages more useful.

	* htfuzzy/Endings.cc(getWords): Suffix-handling improvement (PR#560),
	to prevent inappropriate suffix stripping in endings fuzzy matches.

	* htlib/URLTrans.cc(encodeURL): Fix encoding so all non-ascii
	characters get hex-encoded. I think this is what PR#339 was all about.
